# pneumonia_detection

./: Dockerfile  README.md  app.py  fly.toml  pneumonia_detection.ipynb  pneumonia_detection.py  pyproject.toml  requirements.txt  test.py
.ipynb_checkpoints/: pneumonia_detection-checkpoint.ipynb
k8s/: deployment.yaml  hpa.yaml  service.yaml
