[project]
name = "pneumonia-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "keras-image-helper>=0.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
